k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-ecommerce-deployment
  labels:
    app: backend-ecommerce
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-ecommerce
  template:
    metadata:
      labels:
        app: backend-ecommerce
    spec:
      containers:
        - name: backend-ecommerce
          image: backend-ecommerce:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
