k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-ecommerce-service
spec:
  selector:
    app: backend-ecommerce
  ports:
    - protocol: TCP
      port: 80          # Exposed port
      targetPort: 5000  # Container port
  type: NodePort  # Use NodePort if not on a cloud provider
